force-app/main/default/objects/Training_Tasks__c/Training_Tasks__c.object-meta.xml
<CustomObject>
    <description>新培训任务</description>
    <label>Training</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Training Task Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>