force-app/main/default/objects/Training_Tasks__c/fields/Actual_Number_of_Evaluators__c.field-meta.xml
<CustomField>
    <fullName>Actual_Number_of_Evaluators__c</fullName>
    <description>实际考评人数</description>
    <label>Actual Number of Evaluators</label>
    <summaryForeignKey>Training_Tasks_Evaluate__c.Training_Tasks__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>