force-app/main/default/objects/Training_Tasks__c/fields/Average_Score_of_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Average_Score_of_Evaluation__c</fullName>
    <formula>Total_Score_of_Evaluation__c /  Actual_Number_of_Evaluators__c</formula>
    <label>Average Score of Evaluation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>