force-app/main/default/objects/Training_Tasks__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <formula>CreatedBy.User_Full_Name__c</formula>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>