force-app/main/default/objects/Training_Tasks__c/fields/First_level_Option__c.field-meta.xml
<CustomField>
    <fullName>First_level_Option__c</fullName>
    <label>First-level Option</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promoter Meeting</fullName>
            </value>
            <value>
                <fullName>Product Knowledge</fullName>
            </value>
            <value>
                <fullName>Sales Technique</fullName>
            </value>
            <value>
                <fullName>Corporate Culture</fullName>
            </value>
            <value>
                <fullName>Product Competition</fullName>
            </value>
            <value>
                <fullName>Centralized training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>