force-app/main/default/objects/Training_Tasks__c/fields/Hisense_Entity__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Entity__c</fullName>
    <label>Hisense Entity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hisense_Entity</valueSetName>
    </valueSet>
</CustomField>