force-app/main/default/objects/Training_Tasks__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>TEXT(Training__r.Month__c )</formula>
    <label>Month</label>
    <type>Text</type>
</CustomField>