force-app/main/default/objects/Training_Tasks__c/fields/Number_of_Trainees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Trainees__c</fullName>
    <label>Number of Trainees</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>