force-app/main/default/objects/Training_Tasks__c/fields/Secondary_option__c.field-meta.xml
<CustomField>
    <fullName>Secondary_option__c</fullName>
    <label>Secondary Option</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Merchant personnel</fullName>
            </value>
            <value>
                <fullName>Channel personnel</fullName>
            </value>
            <value>
                <fullName>Hisense brand store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>