force-app/main/default/objects/Training_Tasks__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>预有效</fullName>
            </value>
            <value>
                <fullName>有效</fullName>
            </value>
            <value>
                <fullName>无效</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>