force-app/main/default/objects/Training_Tasks__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Training Tasks</relationshipLabel>
    <relationshipName>Training_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>