force-app/main/default/objects/Training_Tasks__c/fields/Total_Score_of_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Total_Score_of_Evaluation__c</fullName>
    <description>实际考评总分</description>
    <label>Total Score of Evaluation</label>
    <summarizedField>Training_Tasks_Evaluate__c.Score__c</summarizedField>
    <summaryForeignKey>Training_Tasks_Evaluate__c.Training_Tasks__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>