force-app/main/default/objects/Training_Tasks__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <label>Training</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>Training Tasks</relationshipLabel>
    <relationshipName>Training_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>