force-app/main/default/objects/Training_Tasks__c/fields/Training_Address__c.field-meta.xml
<CustomField>
    <fullName>Training_Address__c</fullName>
    <label>Training Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>