force-app/main/default/objects/Training_Tasks__c/fields/Training_Classification__c.field-meta.xml
<CustomField>
    <fullName>Training_Classification__c</fullName>
    <formula>TEXT(Training__r.Training_Classification__c )</formula>
    <label>Training Classification</label>
    <type>Text</type>
</CustomField>