force-app/main/default/objects/Training_Tasks__c/fields/Training_Content__c.field-meta.xml
<CustomField>
    <fullName>Training_Content__c</fullName>
    <label>Training Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>