force-app/main/default/objects/Training_Tasks__c/fields/Training_Duration__c.field-meta.xml
<CustomField>
    <fullName>Training_Duration__c</fullName>
    <formula>(UNIXTIMESTAMP( Training_End_Time__c ) - UNIXTIMESTAMP( Training_Start_Time__c )) / 60</formula>
    <label>Training Duration（min）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>