force-app/main/default/objects/Training_Tasks__c/fields/Training_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Training_End_Time__c</fullName>
    <label>Training End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>