force-app/main/default/objects/Training_Tasks__c/fields/Training_Theme__c.field-meta.xml
<CustomField>
    <fullName>Training_Theme__c</fullName>
    <formula>Training__r.Training_Theme__c</formula>
    <label>Training Theme</label>
    <type>Text</type>
</CustomField>