force-app/main/default/objects/Training_Tasks__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <label>Training Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Training_Type</valueSetName>
    </valueSet>
</CustomField>