force-app/main/default/objects/Training_Tasks__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>TEXT(Training__r.Year__c )</formula>
    <label>Year</label>
    <type>Text</type>
</CustomField>