force-app/main/default/objects/Training_Tasks__c/validationRules/Training_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Training_Time</fullName>
    <active>true</active>
    <errorConditionFormula>Training_End_Time__c -  Training_Start_Time__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Training_End_Time__c</errorDisplayField>
    <errorMessage>The training end time must be longer than the training start time</errorMessage>
</ValidationRule>