force-app/main/default/objects/Training_Tasks__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Store__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>Training_Theme__c</columns>
    <columns>Training_Duration__c</columns>
    <columns>Number_of_Trainees__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>